@@ -1,14 +1,19 @@
 {
   "type": "minecraft:block",
+  "functions": [
+    {
+      "function": "minecraft:explosion_decay"
+    }
+  ],
   "pools": [
     {
-      "bonus_rolls": 0.0,
+      "bonus_rolls": 0,
       "entries": [
         {
-          "type": "minecraft:item",
-          "functions": [
+          "type": "minecraft:alternatives",
+          "children": [
             {
-              "add": false,
+              "type": "minecraft:item",
               "conditions": [
                 {
                   "block": "bygone:glow_gourd_beige",
@@ -18,55 +23,55 @@
                   }
                 }
               ],
-              "count": {
-                "type": "minecraft:uniform",
-                "max": 7.0,
-                "min": 3.0
-              },
-              "function": "minecraft:set_count"
-            },
-            {
-              "function": "minecraft:explosion_decay"
-            }
-          ],
-          "name": "bygone:glow_gourd_beige_slice"
-        },
-        {
-          "type": "minecraft:item",
-          "conditions": [
-            {
-              "block": "bygone:glow_gourd_beige",
-              "condition": "minecraft:block_state_property",
-              "properties": {
-                "age": "2"
-              }
-            },
-            {
-              "condition": "minecraft:match_tool",
-              "predicate": {
-                "predicates": {
-                  "minecraft:enchantments": [
-                    {
-                      "enchantments": "minecraft:silk_touch",
-                      "levels": {
-                        "min": 1
-                      }
-                    }
-                  ]
+              "functions": [
+                {
+                  "add": false,
+                  "count": {
+                    "type": "minecraft:uniform",
+                    "max": 7.0,
+                    "min": 3.0
+                  },
+                  "function": "minecraft:set_count"
+                },
+                {
+                  "enchantment": "minecraft:fortune",
+                  "formula": "minecraft:uniform_bonus_count",
+                  "function": "minecraft:apply_bonus",
+                  "parameters": {
+                    "bonusMultiplier": 1
+                  }
+                },
+                {
+                  "function": "minecraft:limit_count",
+                  "limit": {
+                    "max": 9.0
+                  }
+                },
+                {
+                  "function": "minecraft:explosion_decay"
                 }
-              }
-            },
-            {
-              "condition": "minecraft:entity_properties",
-              "entity": "this",
-              "predicate": {}
+              ],
+              "name": "bygone:glow_gourd_beige_slice"
             }
-          ],
-          "name": "bygone:glow_gourd_beige"
+          ]
         }
       ],
-      "rolls": 1.0
+      "rolls": 1
+    },
+    {
+      "bonus_rolls": 0,
+      "conditions": [
+        {
+          "block": "bygone:glow_gourd_beige",
+          "condition": "minecraft:block_state_property",
+          "properties": {
+            "age": "2"
+          }
+        }
+      ],
+      "entries": [],
+      "rolls": 1
     }
   ],
-  "random_sequence": "bygone:blocks/glow_gourd_beige"
+  "random_sequence": "bygone:glow_gourd_beige"
 }
