@@ -1,8 +1,13 @@
 {
   "type": "minecraft:block",
+  "functions": [
+    {
+      "function": "minecraft:explosion_decay"
+    }
+  ],
   "pools": [
     {
-      "bonus_rolls": 0.0,
+      "bonus_rolls": 0,
       "entries": [
         {
           "type": "minecraft:alternatives",
@@ -11,30 +16,13 @@
               "type": "minecraft:item",
               "conditions": [
                 {
-                  "condition": "minecraft:match_tool",
-                  "predicate": {
-                    "predicates": {
-                      "minecraft:enchantments": [
-                        {
-                          "enchantments": "minecraft:silk_touch",
-                          "levels": {
-                            "min": 1
-                          }
-                        }
-                      ]
-                    }
+                  "block": "bygone:glow_gourd_verdant",
+                  "condition": "minecraft:block_state_property",
+                  "properties": {
+                    "age": "2"
                   }
-                },
-                {
-                  "condition": "minecraft:entity_properties",
-                  "entity": "this",
-                  "predicate": {}
                 }
               ],
-              "name": "bygone:glow_gourd_verdant"
-            },
-            {
-              "type": "minecraft:item",
               "functions": [
                 {
                   "add": false,
@@ -68,8 +56,22 @@
           ]
         }
       ],
-      "rolls": 1.0
+      "rolls": 1
+    },
+    {
+      "bonus_rolls": 0,
+      "conditions": [
+        {
+          "block": "bygone:glow_gourd_verdant",
+          "condition": "minecraft:block_state_property",
+          "properties": {
+            "age": "2"
+          }
+        }
+      ],
+      "entries": [],
+      "rolls": 1
     }
   ],
-  "random_sequence": "bygone:blocks/glow_gourd_verdant"
+  "random_sequence": "bygone:glow_gourd_verdant"
 }
